[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/Debug/DebugMinimap.gd" type="Script" id=1]
[ext_resource path="res://Fonts/DynFont_Timer.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scripts/UI/HUDTimer.gd" type="Script" id=3]
[ext_resource path="res://Scripts/UI/ExpBar.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Debug/DebugText.gd" type="Script" id=5]
[ext_resource path="res://Scripts/UI/HUD.gd" type="Script" id=6]
[ext_resource path="res://Scripts/UI/HUDEquipmentSlotsRow.gd" type="Script" id=7]
[ext_resource path="res://Prefabs/UI/Prefab_EquipmentSlot.tscn" type="PackedScene" id=8]
[ext_resource path="res://StyleBox_ProgressBarBG.tres" type="StyleBox" id=9]
[ext_resource path="res://StyleBox_ProgressBarFG.tres" type="StyleBox" id=10]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 0.282353 )
corner_radius_top_left = 14
corner_radius_bottom_right = 15

[node name="HUD" type="CanvasLayer"]
follow_viewport_enable = true
script = ExtResource( 6 )

[node name="ScreenFade" type="ColorRect" parent="."]
modulate = Color( 0, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Elements" type="Control" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="DebugInfo" type="Control" parent="Elements"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -384.0
margin_top = -216.0
margin_right = 384.0
margin_bottom = 216.0

[node name="Minimap" type="Sprite" parent="Elements/DebugInfo"]
position = Vector2( 93, 353 )
scale = Vector2( 0.25, 0.25 )
region_rect = Rect2( 40, 40, 80, 80 )
script = ExtResource( 1 )

[node name="DebugText" type="Label" parent="Elements/DebugInfo"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -10.0
margin_bottom = -10.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
text = "TESTING 1,2,3"
align = 2
valign = 2
script = ExtResource( 5 )

[node name="ExpBar" type="ProgressBar" parent="Elements"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -360.0
margin_top = -200.0
margin_right = 360.0
margin_bottom = -184.0
mouse_filter = 2
custom_styles/fg = ExtResource( 10 )
custom_styles/bg = ExtResource( 9 )
max_value = 5.0
value = 1.0
percent_visible = false
script = ExtResource( 4 )

[node name="Timer" type="Control" parent="Elements"]
margin_left = 384.0
margin_top = 56.0
margin_right = 384.0
margin_bottom = 56.0
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="Elements/Timer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -45.0
margin_top = -13.0
margin_right = 45.0
margin_bottom = 11.0
rect_rotation = 3.9
rect_pivot_offset = Vector2( 45, 12 )
custom_styles/panel = SubResource( 5 )

[node name="TimerColon" type="Label" parent="Elements/Timer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -16.0
margin_top = -13.0
margin_right = 16.0
margin_bottom = 11.0
rect_pivot_offset = Vector2( 16, 12 )
custom_fonts/font = ExtResource( 2 )
text = ":"
align = 1
valign = 1
autowrap = true

[node name="TimerSecondsOnes" type="Label" parent="Elements/Timer"]
margin_left = 4.0
margin_top = -10.0
margin_right = 36.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 19, 12 )
custom_fonts/font = ExtResource( 2 )
text = "#"
align = 2
valign = 1

[node name="TimerSecondsTens" type="Label" parent="Elements/Timer"]
margin_left = 4.0
margin_top = -10.0
margin_right = 22.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 19, 12 )
custom_fonts/font = ExtResource( 2 )
text = "#"
align = 2
valign = 1

[node name="TimerMinutesOnes" type="Label" parent="Elements/Timer"]
margin_left = -41.0
margin_top = -13.0
margin_right = -9.0
margin_bottom = 11.0
rect_pivot_offset = Vector2( 19, 12 )
custom_fonts/font = ExtResource( 2 )
text = "#"
align = 2
valign = 1

[node name="TimerMinutesTens" type="Label" parent="Elements/Timer"]
margin_left = -41.0
margin_top = -13.0
margin_right = -23.0
margin_bottom = 11.0
rect_pivot_offset = Vector2( 19, 12 )
custom_fonts/font = ExtResource( 2 )
text = "#"
align = 2
valign = 1

[node name="Weapons" type="HBoxContainer" parent="Elements"]
margin_left = 10.0
margin_top = 51.0
margin_right = 146.0
margin_bottom = 83.0
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource( 7 )
slots_type = 1
row_name_for_debug = "weapons"

[node name="EquipmentSlot1" parent="Elements/Weapons" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 16.0
margin_bottom = 32.0

[node name="EquipmentSlot2" parent="Elements/Weapons" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_right = 36.0
margin_bottom = 32.0

[node name="EquipmentSlot3" parent="Elements/Weapons" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 40.0
margin_right = 56.0
margin_bottom = 32.0

[node name="EquipmentSlot4" parent="Elements/Weapons" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 60.0
margin_right = 76.0
margin_bottom = 32.0

[node name="EquipmentSlot5" parent="Elements/Weapons" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 80.0
margin_right = 96.0
margin_bottom = 32.0

[node name="EquipmentSlot6" parent="Elements/Weapons" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 100.0
margin_right = 116.0
margin_bottom = 32.0

[node name="EquipmentSlot7" parent="Elements/Weapons" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 120.0
margin_right = 136.0
margin_bottom = 32.0

[node name="Passives" type="HBoxContainer" parent="Elements"]
margin_left = 10.0
margin_top = 84.0
margin_right = 146.0
margin_bottom = 116.0
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource( 7 )
row_name_for_debug = "passives"

[node name="EquipmentSlot1" parent="Elements/Passives" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 16.0
margin_bottom = 32.0

[node name="EquipmentSlot2" parent="Elements/Passives" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_right = 36.0
margin_bottom = 32.0

[node name="EquipmentSlot3" parent="Elements/Passives" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 40.0
margin_right = 56.0
margin_bottom = 32.0

[node name="EquipmentSlot4" parent="Elements/Passives" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 60.0
margin_right = 76.0
margin_bottom = 32.0

[node name="EquipmentSlot5" parent="Elements/Passives" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 80.0
margin_right = 96.0
margin_bottom = 32.0

[node name="EquipmentSlot6" parent="Elements/Passives" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 100.0
margin_right = 116.0
margin_bottom = 32.0

[node name="EquipmentSlot7" parent="Elements/Passives" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 120.0
margin_right = 136.0
margin_bottom = 32.0
